[ YC-62 ] Localisation for attribute names